# 030-template-python

./: .gitignore  README.md  pyproject.toml
doc/: TODO.md
