[tool.poetry]
name = "030-template-python"
version = "0.1.0"
description = ""
authors = ["Saketh Kasibatla <sake.kasi@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.272"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "src.main:main"

[tool.black]
line-length = 88